--- a/index.html
+++ b/index.html
@@ -487,6 +487,7 @@
     <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-firestore-compat.js"></script>
     <script src="/env-config.js"></script>
     <script src="/firebase-loader.js"></script>
+    <script src="/background-category-loader.js"></script>
     <!-- App Scripts -->
     <script src="/canvas-manager.js"></script>
     <script src="/filter-manager.js"></script>
