--- a/index.html
+++ b/index.html
@@ -294,71 +294,65 @@
         <!-- Center Panel - Canvas Area -->
         <section class="canvas-section">
             <div class="canvas-top-controls">
-                <div class="canvas-header">
-                    <h3><i class="fas fa-palette"></i></h3>
-                    <div class="canvas-controls">
-                        <button class="control-btn" id="undoBtn" title="실행 취소">
-                            <i class="fas fa-undo"></i>
-                        </button>
-                        <button class="control-btn" id="redoBtn" title="다시 실행">
-                            <i class="fas fa-redo"></i>
-                        </button>
-                        <button class="control-btn" id="captureBtn" title="캡처">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-square-scissors-icon lucide-square-scissors"><rect width="20" height="20" x="2" y="2" rx="2"/><circle cx="8" cy="8" r="2"/><path d="M9.414 9.414 12 12"/><path d="M14.8 14.8 18 18"/><circle cx="8" cy="16" r="2"/><path d="m18 6-8.586 8.586"/></svg>
-                        </button>
-                        <div style="display: none; align-items: center; gap: 8px;">
-                            <label for="testSizeSelect" style="font-size: 12px; color: #64748b;">테스트 크기:</label>
-                            <select id="testSizeSelect" style="padding: 4px 8px; border-radius: 6px; border: 1px solid #e2e8f0; font-size: 12px; cursor: pointer;">
-                                <option value="2">2mm</option>
-                                <option value="5">5mm</option>
-                                <option value="10">10mm</option>
-                                <option value="20">20mm</option>
-                            </select>
-                            <button class="control-btn" id="testSizeBtn" title="실제 크기 테스트">
-                                <i class="fas fa-ruler"></i>
-                            </button>
-                        </div>
-                    </div>
-                </div>
+                <div class="canvas-unified-controls">
+                    <!-- 이용가이드 버튼 -->
+                    <button class="control-btn-unified guide-btn-highlight" id="guideBtn" title="이용가이드">
+                        <i class="fas fa-lightbulb"></i>
+                        <span>이용가이드</span>
+                    </button>
 
-                <!-- Layer Controls -->
-                <div class="layer-section-inline">
-                    <div class="layer-controls-inline">
-                        <button class="layer-btn-inline" id="bringToFrontBtn">
-                            <i class="fas fa-arrow-up"></i>
-                            앞으로
-                        </button>
-                        <button class="layer-btn-inline" id="sendToBackBtn">
-                            <i class="fas fa-arrow-down"></i>
-                            뒤로
-                        </button>
-                        <button class="layer-btn-inline" id="flipHorizontalBtn">
-                            <i class="fas fa-arrows-alt-h"></i>
-                            좌우반전
-                        </button>
-                        <button class="layer-btn-inline" id="duplicateBtn">
-                            <i class="fas fa-copy"></i>
-                            복제
-                        </button>
-                        <button class="layer-btn-inline danger" id="deleteBtn">
-                            <i class="fas fa-trash"></i>
-                            삭제
-                        </button>
-                    </div>
-                </div>
+                    <!-- 팔레트 & 기본 컨트롤 -->
+                    <button class="control-btn-unified palette-icon" title="팔레트">
+                        <i class="fas fa-palette"></i>
+                    </button>
+                    <button class="control-btn-unified" id="undoBtn" title="실행 취소">
+                        <i class="fas fa-undo"></i>
+                        <span>취소</span>
+                    </button>
+                    <button class="control-btn-unified" id="redoBtn" title="다시 실행">
+                        <i class="fas fa-redo"></i>
+                        <span>다시실행</span>
+                    </button>
 
-                <!-- Action Controls -->
-                <div class="action-section-inline">
-                    <div class="action-controls-inline">
-                        <button class="layer-btn-inline" id="resetBtn">
-                            <i class="fas fa-refresh"></i>
-                            초기화
-                        </button>
-                        <button class="layer-btn-inline" id="fullscreenBtn">
-                            <i class="fas fa-expand"></i>
-                            실제 사이즈 보기
-                        </button>
-                    </div>
+                    <div class="control-divider"></div>
+
+                    <!-- 레이어 컨트롤 -->
+                    <button class="control-btn-unified" id="bringToFrontBtn" title="앞으로">
+                        <i class="fas fa-arrow-up"></i>
+                        <span>앞으로</span>
+                    </button>
+                    <button class="control-btn-unified" id="sendToBackBtn" title="뒤로">
+                        <i class="fas fa-arrow-down"></i>
+                        <span>뒤로</span>
+                    </button>
+                    <button class="control-btn-unified" id="flipHorizontalBtn" title="좌우반전">
+                        <i class="fas fa-arrows-alt-h"></i>
+                        <span>좌우반전</span>
+                    </button>
+                    <button class="control-btn-unified" id="duplicateBtn" title="복제">
+                        <i class="fas fa-copy"></i>
+                        <span>복제</span>
+                    </button>
+                    <button class="control-btn-unified danger" id="deleteBtn" title="삭제">
+                        <i class="fas fa-trash"></i>
+                        <span>삭제</span>
+                    </button>
+
+                    <div class="control-divider"></div>
+
+                    <!-- 액션 컨트롤 -->
+                    <button class="control-btn-unified" id="resetBtn" title="초기화">
+                        <i class="fas fa-refresh"></i>
+                        <span>초기화</span>
+                    </button>
+                    <button class="control-btn-unified" id="fullscreenBtn" title="실제 사이즈 보기">
+                        <i class="fas fa-expand"></i>
+                        <span>실제 사이즈 보기</span>
+                    </button>
+                    <button class="control-btn-unified" id="captureBtn" title="캡처">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-square-scissors"><rect width="20" height="20" x="2" y="2" rx="2"/><circle cx="8" cy="8" r="2"/><path d="M9.414 9.414 12 12"/><path d="M14.8 14.8 18 18"/><circle cx="8" cy="16" r="2"/><path d="m18 6-8.586 8.586"/></svg>
+                        <span>캡처</span>
+                    </button>
                 </div>
             </div>
             <div class="canvas-wrapper" id="canvasWrapper">
@@ -477,6 +471,21 @@
     <div class="loading-overlay" id="loadingOverlay">
         <div class="loading-spinner">
             <i class="fas fa-spinner fa-spin"></i>
+        </div>
+    </div>
+
+    <!-- Guide Modal -->
+    <div class="guide-modal-overlay" id="guideModal">
+        <div class="guide-modal">
+            <div class="guide-modal-header">
+                <h3><i class="fas fa-book-open"></i> 이용 가이드</h3>
+                <button class="guide-modal-close" id="guideModalClose">
+                    <i class="fas fa-times"></i>
+                </button>
+            </div>
+            <div class="guide-modal-content">
+                <!-- 내용은 비워둠 - 추후 추가 예정 -->
+            </div>
         </div>
     </div>
     
