--- a/index.html
+++ b/index.html
@@ -301,58 +301,63 @@
                         <span>이용가이드</span>
                     </button>
 
-                    <!-- 팔레트 & 기본 컨트롤 -->
-                    <button class="control-btn-unified palette-icon" title="팔레트">
-                        <i class="fas fa-palette"></i>
-                    </button>
-                    <button class="control-btn-unified" id="undoBtn" title="실행 취소">
-                        <i class="fas fa-undo"></i>
-                        <span>취소</span>
-                    </button>
-                    <button class="control-btn-unified" id="redoBtn" title="다시 실행">
-                        <i class="fas fa-redo"></i>
-                        <span>다시실행</span>
-                    </button>
+                    <div class="control-divider"></div>
+
+                    <!-- 기본 컨트롤 그룹 -->
+                    <div class="control-group">
+                        <button class="control-btn-unified" id="undoBtn" title="실행 취소">
+                            <i class="fas fa-undo"></i>
+                            <span>취소</span>
+                        </button>
+                        <button class="control-btn-unified" id="redoBtn" title="다시 실행">
+                            <i class="fas fa-redo"></i>
+                            <span>다시실행</span>
+                        </button>
+                    </div>
 
                     <div class="control-divider"></div>
 
-                    <!-- 레이어 컨트롤 -->
-                    <button class="control-btn-unified" id="bringToFrontBtn" title="앞으로">
-                        <i class="fas fa-arrow-up"></i>
-                        <span>앞으로</span>
-                    </button>
-                    <button class="control-btn-unified" id="sendToBackBtn" title="뒤로">
-                        <i class="fas fa-arrow-down"></i>
-                        <span>뒤로</span>
-                    </button>
-                    <button class="control-btn-unified" id="flipHorizontalBtn" title="좌우반전">
-                        <i class="fas fa-arrows-alt-h"></i>
-                        <span>좌우반전</span>
-                    </button>
-                    <button class="control-btn-unified" id="duplicateBtn" title="복제">
-                        <i class="fas fa-copy"></i>
-                        <span>복제</span>
-                    </button>
-                    <button class="control-btn-unified danger" id="deleteBtn" title="삭제">
-                        <i class="fas fa-trash"></i>
-                        <span>삭제</span>
-                    </button>
+                    <!-- 레이어 컨트롤 그룹 -->
+                    <div class="control-group">
+                        <button class="control-btn-unified" id="bringToFrontBtn" title="앞으로">
+                            <i class="fas fa-arrow-up"></i>
+                            <span>앞으로</span>
+                        </button>
+                        <button class="control-btn-unified" id="sendToBackBtn" title="뒤로">
+                            <i class="fas fa-arrow-down"></i>
+                            <span>뒤로</span>
+                        </button>
+                        <button class="control-btn-unified" id="flipHorizontalBtn" title="좌우반전">
+                            <i class="fas fa-arrows-alt-h"></i>
+                            <span>좌우반전</span>
+                        </button>
+                        <button class="control-btn-unified" id="duplicateBtn" title="복제">
+                            <i class="fas fa-copy"></i>
+                            <span>복제</span>
+                        </button>
+                        <button class="control-btn-unified danger" id="deleteBtn" title="삭제">
+                            <i class="fas fa-trash"></i>
+                            <span>삭제</span>
+                        </button>
+                    </div>
 
                     <div class="control-divider"></div>
 
-                    <!-- 액션 컨트롤 -->
-                    <button class="control-btn-unified" id="resetBtn" title="초기화">
-                        <i class="fas fa-refresh"></i>
-                        <span>초기화</span>
-                    </button>
-                    <button class="control-btn-unified" id="fullscreenBtn" title="실제 사이즈 보기">
-                        <i class="fas fa-expand"></i>
-                        <span>실제 사이즈 보기</span>
-                    </button>
-                    <button class="control-btn-unified" id="captureBtn" title="캡처">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-square-scissors"><rect width="20" height="20" x="2" y="2" rx="2"/><circle cx="8" cy="8" r="2"/><path d="M9.414 9.414 12 12"/><path d="M14.8 14.8 18 18"/><circle cx="8" cy="16" r="2"/><path d="m18 6-8.586 8.586"/></svg>
-                        <span>캡처</span>
-                    </button>
+                    <!-- 액션 컨트롤 그룹 -->
+                    <div class="control-group">
+                        <button class="control-btn-unified" id="resetBtn" title="초기화">
+                            <i class="fas fa-refresh"></i>
+                            <span>초기화</span>
+                        </button>
+                        <button class="control-btn-unified" id="fullscreenBtn" title="실제 사이즈 보기">
+                            <i class="fas fa-expand"></i>
+                            <span>실제 사이즈 보기</span>
+                        </button>
+                        <button class="control-btn-unified" id="captureBtn" title="캡처">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-square-scissors"><rect width="20" height="20" x="2" y="2" rx="2"/><circle cx="8" cy="8" r="2"/><path d="M9.414 9.414 12 12"/><path d="M14.8 14.8 18 18"/><circle cx="8" cy="16" r="2"/><path d="m18 6-8.586 8.586"/></svg>
+                            <span>캡처</span>
+                        </button>
+                    </div>
                 </div>
             </div>
             <div class="canvas-wrapper" id="canvasWrapper">
