Update: 스타일 및 HTML 개선

--- a/index.html
+++ b/index.html
@@ -26,10 +26,6 @@
     <main class="main-container">
         <!-- Left Panel - Tools & Items -->
         <aside class="left-panel">
-            <!-- Toggle Button for Left Panel -->
-            <button class="panel-toggle left-toggle" id="leftToggle" title="왼쪽 패널 접기/펼치기">
-                <i class="fas fa-chevron-left"></i>
-            </button>
             <!-- Search & Filter Section -->
             <section class="search-section">
                 <div class="search-controls">
@@ -297,6 +293,14 @@
 
         <!-- Center Panel - Canvas Area -->
         <section class="canvas-section">
+            <!-- Toggle Buttons -->
+            <button class="panel-toggle left-toggle" id="leftToggle" title="왼쪽 패널 접기/펼치기">
+                <i class="fas fa-chevron-left"></i>
+            </button>
+            <button class="panel-toggle right-toggle" id="rightToggle" title="오른쪽 패널 접기/펼치기">
+                <i class="fas fa-chevron-right"></i>
+            </button>
+
             <div class="canvas-top-controls">
                 <div class="canvas-unified-controls">
                     <!-- 이용가이드 버튼 -->
@@ -417,10 +421,6 @@
 
         <!-- Right Panel - Background & Options -->
         <aside class="right-panel">
-            <!-- Toggle Button for Right Panel -->
-            <button class="panel-toggle right-toggle" id="rightToggle" title="오른쪽 패널 접기/펼치기">
-                <i class="fas fa-chevron-right"></i>
-            </button>
             <!-- Background Selection -->
             <section class="background-section">
                 <div class="section-header">
