--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
     <main class="main-container">
         <!-- Left Panel - Tools & Items -->
         <aside class="left-panel">
+            <!-- Toggle Button for Left Panel -->
+            <button class="panel-toggle left-toggle" id="leftToggle" title="왼쪽 패널 접기/펼치기">
+                <i class="fas fa-chevron-left"></i>
+            </button>
             <!-- Search & Filter Section -->
             <section class="search-section">
                 <div class="search-controls">
@@ -293,14 +297,6 @@
 
         <!-- Center Panel - Canvas Area -->
         <section class="canvas-section">
-            <!-- Toggle Buttons -->
-            <button class="panel-toggle left-toggle" id="leftToggle" title="왼쪽 패널 접기/펼치기">
-                <i class="fas fa-chevron-left"></i>
-            </button>
-            <button class="panel-toggle right-toggle" id="rightToggle" title="오른쪽 패널 접기/펼치기">
-                <i class="fas fa-chevron-right"></i>
-            </button>
-
             <div class="canvas-top-controls">
                 <div class="canvas-unified-controls">
                     <!-- 이용가이드 버튼 -->
@@ -328,19 +324,19 @@
                     <!-- 레이어 컨트롤 그룹 -->
                     <div class="control-group">
                         <button class="control-btn-unified" id="bringToFrontBtn" title="앞으로">
-                            <i class="fas fa-arrow-up"></i>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21.5 2v6h-6M2.5 22v-6h6M2 11.5a10 10 0 0 1 18.8-4.3M22 12.5a10 10 0 0 1-18.8 4.2"/></svg>
                             <span>앞으로</span>
                         </button>
                         <button class="control-btn-unified" id="sendToBackBtn" title="뒤로">
-                            <i class="fas fa-arrow-down"></i>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12.83 2.18v.02c.85-.1 1.7.12 2.34.76l2.85 2.85c.64.64.86 1.49.76 2.34v.02M3.6 3.6h0c-1.6 1.6-1.6 4.2 0 5.8L8.7 14.5c.8.8 2.2.8 3 0l5.1-5.1c.8-.8.8-2.2 0-3L11.7 1.3c-1.6-1.6-4.2-1.6-5.8 0h0v.01M8.7 14.5 3.6 19.6c-1.6 1.6-1.6 4.2 0 5.8h0c1.6 1.6 4.2 1.6 5.8 0l5.1-5.1M14.5 9.5l5.6 5.6c1.6 1.6 1.6 4.2 0 5.8h0c-1.6 1.6-4.2 1.6-5.8 0l-5.1-5.1"/></svg>
                             <span>뒤로</span>
                         </button>
                         <button class="control-btn-unified" id="flipHorizontalBtn" title="좌우반전">
-                            <i class="fas fa-arrows-alt-h"></i>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M3 7V5a2 2 0 0 1 2-2h2"/><path d="M17 3h2a2 2 0 0 1 2 2v2"/><path d="M21 17v2a2 2 0 0 1-2 2h-2"/><path d="M7 21H5a2 2 0 0 1-2-2v-2"/><path d="M7 12h10"/><path d="m13 16 4-4-4-4"/><path d="m11 8-4 4 4 4"/></svg>
                             <span>좌우반전</span>
                         </button>
                         <button class="control-btn-unified" id="duplicateBtn" title="복제">
-                            <i class="fas fa-copy"></i>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"/><line x1="12" y1="8" x2="12" y2="16"/><line x1="8" y1="12" x2="16" y2="12"/></svg>
                             <span>복제</span>
                         </button>
                         <button class="control-btn-unified danger" id="deleteBtn" title="삭제">
@@ -421,6 +417,10 @@
 
         <!-- Right Panel - Background & Options -->
         <aside class="right-panel">
+            <!-- Toggle Button for Right Panel -->
+            <button class="panel-toggle right-toggle" id="rightToggle" title="오른쪽 패널 접기/펼치기">
+                <i class="fas fa-chevron-right"></i>
+            </button>
             <!-- Background Selection -->
             <section class="background-section">
                 <div class="section-header">
